<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context="ui.HelpActivity"
    android:id="@+id/rl">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/nomeInicio"
                android:text="@string/nomeInicio"
                android:textColor="@color/textColor"
                android:textSize="20sp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/msgInicio"
                android:text="@string/msgInicio"
                android:textColor="@color/textColor"
                android:textSize="16sp"
                android:layout_below="@+id/nomeInicio"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/nomeMapa"
                android:text="@string/nomeMapa"
                android:textColor="@color/textColor"
                android:textSize="20sp"
                android:layout_below="@+id/msgInicio"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="20dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/msgMapa"
                android:text="@string/msgMapa"
                android:textColor="@color/textColor"
                android:textSize="16sp"
                android:layout_below="@+id/nomeMapa"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/nomeEstado"
                android:text="@string/nomeEstado"
                android:textColor="@color/textColor"
                android:textSize="20sp"
                android:layout_below="@+id/msgMapa"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="20dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/msgEstado"
                android:text="@string/msgEstado"
                android:textColor="@color/textColor"
                android:textSize="16sp"
                android:layout_below="@+id/nomeEstado"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/nomeSOS"
                android:text="@string/nomeSOS"
                android:textColor="@color/textColor"
                android:textSize="20sp"
                android:layout_below="@+id/msgEstado"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="20dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/msgSOS"
                android:text="@string/msgSOS"
                android:textColor="@color/textColor"
                android:textSize="16sp"
                android:layout_below="@+id/nomeSOS"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/nomeMsgVoz"
                android:text="@string/nomeMsgVoz"
                android:textColor="@color/textColor"
                android:textSize="20sp"
                android:layout_below="@+id/msgSOS"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="20dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/msgMsgVoz"
                android:text="@string/msgMsgVoz"
                android:textColor="@color/textColor"
                android:textSize="16sp"
                android:layout_below="@+id/nomeMsgVoz"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/nomeFoto"
                android:text="@string/nomeFoto"
                android:textColor="@color/textColor"
                android:textSize="20sp"
                android:layout_below="@+id/msgMsgVoz"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="20dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/msgFoto"
                android:text="@string/msgFoto"
                android:textColor="@color/textColor"
                android:textSize="16sp"
                android:layout_below="@+id/nomeFoto"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"/>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>